# ProjectDump

./: README.md
NRQuiz/: README.md  main.nim
RRQuiz/: .gitignore  Cargo.toml  README.md
RRQuiz/src/: main.rs  res.rs  types_funcs.rs
src/: main.rs  res.rs
