[package]
name = "rrquiz_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries.crates-io]
protocol = "sparse"

[dependencies]
rand = "0.8.5"
chrono = "0.4.23"

[profile.release]
strip = true
opt-level = "s"
#lto = true
#codegen-units = 1
